Fixed bug with box object spacing

--- a/03 - generic/_generic.reset.scss
+++ b/03 - generic/_generic.reset.scss
@@ -16,6 +16,7 @@ hr,
 fieldset, legend {
 	margin:  0;
 	padding: 0;
+	border: 0;
 }
 
 
